plugins {
    id 'com.android.application'
    id 'ru.cleverpumpkin.proguard-dictionaries-generator'
    id 'org.jetbrains.kotlin.android'
}

android {
    namespace 'com.github.catvod'

    compileSdk 35

    defaultConfig {
        applicationId "com.github.catvod.demo"
        minSdk 24
        targetSdk 35
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles 'proguard-rules.pro'
            proguardDictionaries {
                dictionaryNames = ["build/class-dictionary", "build/package-dictionary", "build/obfuscation-dictionary"]
                minLineLength 1
                maxLineLength 3
                linesCountInDictionary 100000
            }
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    configurations.configureEach {
        resolutionStrategy {
            force 'com.squareup.okhttp3:okhttp:' + okhttpVersion
        }
    }
}

dependencies {
    implementation 'com.squareup.okhttp3:okhttp:' + okhttpVersion
    implementation 'com.github.thegrizzlylabs:sardine-android:0.9'
    implementation 'wang.harlon.quickjs:wrapper-android:2.4.3'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'cn.wanghaomiao:JsoupXpath:2.5.1'
    implementation 'com.orhanobut:logger:2.2.0'
    implementation 'org.jsoup:jsoup:1.18.3'

    testImplementation 'junit:junit:4.13.2'
    testImplementation "io.github.dokar3:quickjs-kt-jvm:1.0.0-alpha13"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
    testImplementation "org.robolectric:robolectric:4.12.2"
    testImplementation 'org.mockito:mockito-core:5.12.0'
}